# rosetta

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py  setup.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: lint-git-pull-request.yaml
contracts/: example.yaml  fomo_good.yaml  fomo_test.yaml  fomo_test2.yaml  so_101.yaml  turtlebot.yaml  vortex_ctl.yaml
launch/: episode_recorder_launch.py  policy_bridge.launch.py  recorder_server.launch.py  rosetta_client_launch.py  rosetta_hil_launch.py  turtlebot3_red_pillar_world.launch.py  turtlebot_policy_bridge.launch.py  turtlebot_recorder_server.launch.py  vortex_ctl_policy_bridge.launch.py  vortex_ctl_recorder_server.launch.py
params/: rosetta_client.yaml  rosetta_hil_manager.yaml
profiles/: lerobot_classifier_default.yaml  transformers_vlm_labelmap.yaml  transformers_vlm_qwen3_vl_labelmap.yaml  transformers_vlm_regex_float.yaml
rosetta/: bag_to_lerobot.py  client.py  contract_utils.py  episode_keyboard_node.py  episode_recorder.py  episode_recorder_node.py  policy_bridge_node.py  policy_visualizer_node.py  port_bags.py  rosetta_client_node.py  rosetta_hil_manager_node.py  server.py
rosetta.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
rosetta/common/: __init__.py  aux_model_server.py  classifier_server.py  contract.py  contract_utils.py  converters.py  decoders.py  encoders.py  inference_profile.py  ros2_utils.py  signal_utils.py
scripts/: bag_to_lerobot.py  read_parquet.py  upload_hf.py
(+1 files in other folders)
